<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/root_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        tools:backgroundTint="@color/color_note_list_purple">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_95"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95"/>

                <TextView
                    android:id="@+id/tv_note_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/corporative_sans_rd_regular"
                    android:gravity="start"
                    android:text="@string/app_name"
                    android:textColor="@color/notes_card_text_on_bright_bg"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_5"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/ib_delete"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_note_title"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_95"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.12" />

                <TextView
                    android:id="@+id/tv_note_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
                    android:gravity="start"
                    android:paddingVertical="10dp"
                    android:maxLines="3"
                    android:text="@string/random_text"
                    android:textColor="@color/notes_card_text_on_bright_bg"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_5"
                    app:layout_constraintTop_toBottomOf="@id/tv_note_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/note_photos_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:clipToPadding="false"
                android:contentDescription="@string/note_images_recycler_view"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintTop_toBottomOf="@id/cl_texts"
                tools:itemCount="5"
                tools:listitem="@layout/notes_image_recyclerview_item"
                tools:paddingStart="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>